--- a/warp-gui.desktop
+++ b/warp-gui.desktop
@@ -3,8 +3,8 @@ Version=1.0
 Name=Warp
 Comment=Warp Linux gui client for Cloudflare Warp.
 Exec=/usr/local/bin/warp-gui
-Path=/usr/local/bin/
-Icon=/usr/share/icons/Humanity/apps/32/warp-gui.svg
+Icon=/usr/share/icons/Humanity/apps/32/warp-gui.jpeg
 Terminal=false
 Type=Application
 Categories=Utility;Development;
+StartupNotify=true
