--- a/warp-gui.desktop
+++ b/warp-gui.desktop
@@ -6,5 +6,6 @@ Exec=/usr/local/bin/warp-gui
 Icon=/usr/share/icons/Humanity/apps/32/warp-gui.jpeg
 Terminal=false
 Type=Application
-Categories=Utility;Development;
-StartupNotify=true
+Categories=Utility;Network;
+MimeType=x-scheme-handler/warp-cli;
+StartupNotify=false
